further wlutz arc prototyping
Former-commit-id: 5cac311363895d7704165e56c175bbaf22c5ea06

--- a/examples/labs/rccc/create_service_mode_plan/007_varied_dose_rates.ipynb
+++ b/examples/labs/rccc/create_service_mode_plan/007_varied_dose_rates.ipynb
@@ -30,21 +30,21 @@
    "outputs": [],
    "source": [
     "machine_map = {\n",
-    "    '2619': {\n",
-    "        'sender_ae_title': b'CMS_SCU',\n",
-    "        'ip': '192.168.100.200',\n",
-    "        'port': 104\n",
-    "    },\n",
-    "    '2694': {\n",
-    "        'sender_ae_title': b'CMS_SCU',\n",
-    "        'ip': '192.168.100.201',\n",
-    "        'port': 104\n",
-    "    },\n",
-    "    '4299': {\n",
-    "        'sender_ae_title': b'PYMEDPHYS',\n",
-    "        'ip': '127.0.0.1',\n",
-    "        'port': 44104\n",
-    "    },\n",
+    "#     '2619': {\n",
+    "#         'sender_ae_title': b'CMS_SCU',\n",
+    "#         'ip': '192.168.100.200',\n",
+    "#         'port': 104\n",
+    "#     },\n",
+    "#     '2694': {\n",
+    "#         'sender_ae_title': b'CMS_SCU',\n",
+    "#         'ip': '192.168.100.201',\n",
+    "#         'port': 104\n",
+    "#     },\n",
+    "#     '4299': {\n",
+    "#         'sender_ae_title': b'PYMEDPHYS',\n",
+    "#         'ip': '127.0.0.1',\n",
+    "#         'port': 44104\n",
+    "#     },\n",
     "    '9002': {\n",
     "        'sender_ae_title': b'PYMEDPHYS',\n",
     "        'ip': '127.0.0.1',\n",
@@ -60,10 +60,10 @@
    "outputs": [],
    "source": [
     "full_dose_rates = {\n",
-    "    '00_06MV': 600,\n",
-    "    '01_10MV': 480,\n",
-    "    '02_06FFF': 1560,\n",
-    "    '03_10FFF': 2300\n",
+    "#     '00_06MV': 600,\n",
+    "    '01_10MV': 600,\n",
+    "#     '02_06FFF': 1560,\n",
+    "#     '03_10FFF': 2300\n",
     "}\n",
     "\n",
     "half_dose_rates = {\n",
