--- a/examples/labs/rccc/wlutz/arc_analysis/001_create_dicom_plans_and_send.ipynb
+++ b/examples/labs/rccc/wlutz/arc_analysis/001_create_dicom_plans_and_send.ipynb
@@ -19,38 +19,7 @@
     "import pydicom\n",
     "import pynetdicom\n",
     "\n",
-    "import pymedphys.labs.serviceplans.create\n",
-    "import pymedphys._dicom.header"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "machine_map = {\n",
-    "    '2619': {\n",
-    "        'sender_ae_title': b'CMS_SCU',\n",
-    "        'ip': '192.168.100.200',\n",
-    "        'port': 104\n",
-    "    },\n",
-    "    '2694': {\n",
-    "        'sender_ae_title': b'CMS_SCU',\n",
-    "        'ip': '192.168.100.201',\n",
-    "        'port': 104\n",
-    "    },\n",
-    "    '4299': {\n",
-    "        'sender_ae_title': b'PYMEDPHYS',\n",
-    "        'ip': '127.0.0.1',\n",
-    "        'port': 44104\n",
-    "    },\n",
-    "    '9002': {\n",
-    "        'sender_ae_title': b'PYMEDPHYS',\n",
-    "        'ip': '127.0.0.1',\n",
-    "        'port': 43104\n",
-    "    },\n",
-    "}"
+    "import pymedphys.labs.serviceplans.create"
    ]
   },
   {
@@ -96,28 +65,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for machine_id, settings in machine_map.items():\n",
-    "    print(f\"\\n\\n========\\n  {machine_id}  \\n========\\n\")\n",
+    "ae = pynetdicom.AE(ae_title=b'CMS_SCU')\n",
+    "ae.requested_contexts = pynetdicom .VerificationPresentationContexts\n",
+    "ae.add_requested_context(\n",
+    "    pynetdicom.sop_class.RTPlanStorage,\n",
+    "    transfer_syntax=pydicom.uid.ExplicitVRLittleEndian\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for key, plan in plans.items():\n",
+    "    print(key)\n",
     "    \n",
-    "    ae = pynetdicom.AE(ae_title=settings['sender_ae_title'])\n",
-    "    ae.requested_contexts = pynetdicom.VerificationPresentationContexts\n",
-    "    ae.add_requested_context(\n",
-    "        pynetdicom.sop_class.RTPlanStorage,\n",
-    "        transfer_syntax=pydicom.uid.ExplicitVRLittleEndian\n",
-    "    )\n",
+    "    plan.TransferSyntaxUID = pydicom.uid.ExplicitVRLittleEndian\n",
+    "    plan.fix_meta_info(enforce_standard=True)\n",
     "    \n",
-    "    for key, plan in plans.items():\n",
-    "        print(key)\n",
-    "        \n",
-    "        adjusted_plan = pymedphys._dicom.header.adjust_machine_name(plan, machine_id)\n",
-    "\n",
-    "        adjusted_plan.TransferSyntaxUID = pydicom.uid.ExplicitVRLittleEndian\n",
-    "        adjusted_plan.fix_meta_info(enforce_standard=True)\n",
-    "\n",
-    "        assoc = ae.associate(settings['ip'], settings['port'], ae_title=b'EOS_RTD')\n",
-    "        status = assoc.send_c_store(adjusted_plan)\n",
-    "        assoc.release()\n",
-    "        print(pynetdicom.status.code_to_category(status.Status))"
+    "    assoc = ae.associate('192.168.100.200', 104, ae_title='EOS_RTD')\n",
+    "    status = assoc.send_c_store(plan)\n",
+    "    assoc.release()\n",
+    "    print(pynetdicom.status.code_to_category(status.Status))"
    ]
   }
  ],
