improve example notebook
Former-commit-id: 52f87af46aa0261a7e04b120577e29c88c768f7f

--- a/examples/labs/howto-drafts/gamma_from_dicom.ipynb
+++ b/examples/labs/howto-drafts/gamma_from_dicom.ipynb
@@ -42,35 +42,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_DIR = pathlib.Path('data')\n",
-    "DATA_DIR.mkdir(exist_ok=True)\n",
-    "\n",
-    "filenames = {\n",
-    "    'reference': 'original_dose_beam_4.dcm',\n",
-    "    'evaluation': 'logfile_dose_beam_4.dcm'\n",
-    "}\n",
-    "\n",
-    "download_urls = {\n",
-    "    key: f'https://zenodo.org/record/3382023/files/{filename}?download=1'\n",
-    "    for key, filename in filenames.items()\n",
-    "}\n",
-    "\n",
-    "filepaths = {\n",
-    "    key: DATA_DIR.joinpath(filename)\n",
-    "    for key, filename in filenames.items()\n",
-    "}\n",
-    "\n",
-    "dicom_datasets = {}\n",
-    "\n",
-    "for key, filepath in filepaths.items():\n",
-    "    if not filepath.exists():\n",
-    "        urllib.request.urlretrieve(download_urls[key], filepath)\n",
-    "        \n",
-    "    dicom_datasets[key] = pydicom.dcmread(str(filepath), force=True)\n",
-    "    \n",
-    "    \n",
-    "reference = dicom_datasets['reference']\n",
-    "evaluation = dicom_datasets['evaluation']"
+    "reference_filepath = pymedphys.data_path(\"original_dose_beam_4.dcm\")\n",
+    "evaluation_filepath = pymedphys.data_path(\"logfile_dose_beam_4.dcm\")\n",
+    "   \n",
+    "reference = pydicom.read_file(str(reference_filepath), force=True)\n",
+    "evaluation = pydicom.read_file(str(evaluation_filepath), force=True)"
    ]
   },
   {
@@ -259,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   },
   "nbsphinx": {
    "timeout": 600
