--- a/examples/labs/howto-drafts/gamma_from_dicom.ipynb
+++ b/examples/labs/howto-drafts/gamma_from_dicom.ipynb
@@ -28,6 +28,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys; sys.executable"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -221,9 +230,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pymedphys-master",
    "language": "python",
-   "name": "python3"
+   "name": "pymedphys-master"
   },
   "language_info": {
    "codemirror_mode": {
@@ -235,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.9"
   },
   "nbsphinx": {
    "timeout": 600
