handle sub attributes
Former-commit-id: d0f744acaaadc6ca918636a482aaad0b8a777ac2 [formerly fb4986a0156b4ca24ca7fcdf16fc6d1f18042a64]
Former-commit-id: 7058d95dfee3c0e409bed333bb2110625bd047ba

--- a/examples/labs/howto-drafts/gamma_from_dicom.ipynb
+++ b/examples/labs/howto-drafts/gamma_from_dicom.ipynb
@@ -33,7 +33,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys; sys.executable"
+    "# import scipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pymedphys.gamma()"
    ]
   },
   {
