make data downloading have a progress bar

--- a/examples/labs/howto-drafts/gamma_from_dicom.ipynb
+++ b/examples/labs/howto-drafts/gamma_from_dicom.ipynb
@@ -28,24 +28,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import scipy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pymedphys.gamma()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -61,8 +43,25 @@
    "outputs": [],
    "source": [
     "reference_filepath = pymedphys.data_path(\"original_dose_beam_4.dcm\")\n",
+    "reference_filepath"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "evaluation_filepath = pymedphys.data_path(\"logfile_dose_beam_4.dcm\")\n",
-    "   \n",
+    "evaluation_filepath"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "reference = pydicom.read_file(str(reference_filepath), force=True)\n",
     "evaluation = pydicom.read_file(str(evaluation_filepath), force=True)"
    ]
