able to create a bundle

--- a/examples/labs/howto-drafts/gamma_from_dicom.ipynb
+++ b/examples/labs/howto-drafts/gamma_from_dicom.ipynb
@@ -24,12 +24,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Getting the demo DICOM files\n",
-    "\n",
-    "Let's download some demo files for the purpose of demonstrating `gamma_dicom` usage."
+    "import jupyterlab_server"
    ]
   },
   {
@@ -38,8 +38,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = {}\n",
-    "test.a"
+    "jupyterlab_server.__version__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Getting the demo DICOM files\n",
+    "\n",
+    "Let's download some demo files for the purpose of demonstrating `gamma_dicom` usage."
    ]
   },
   {
