initial work reading tel file
Former-commit-id: d28454bc698b59b2d8c191f6ae24181080322efb [formerly 879bf74efd29122c1aac30723f639b85e6d4888a]
Former-commit-id: f89e7aa6e75c0aa9a43074937285d06793d3f388

--- a/examples/labs/rccc/monaco-trf-comparison/001-read-tel-file.ipynb
+++ b/examples/labs/rccc/monaco-trf-comparison/001-read-tel-file.ipynb
@@ -6,11 +6,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import win32file\n",
-    "import msvcrt\n",
+    "import re\n",
+    "import sys\n",
     "\n",
     "import pymedphys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if sys.platform == 'win32':\n",
+    "    import os\n",
+    "    import win32file\n",
+    "    import msvcrt\n",
+    "    \n",
+    "    def read_trf_contents(filepath):\n",
+    "        handle = win32file.CreateFile(\n",
+    "            str(filepath),\n",
+    "            win32file.GENERIC_READ,\n",
+    "            win32file.FILE_SHARE_DELETE |\n",
+    "            win32file.FILE_SHARE_READ |\n",
+    "            win32file.FILE_SHARE_WRITE,\n",
+    "            None,\n",
+    "            win32file.OPEN_EXISTING,\n",
+    "            0,\n",
+    "            None)\n",
+    "\n",
+    "\n",
+    "        detached_handle = handle.Detach()\n",
+    "\n",
+    "        file_descriptor = msvcrt.open_osfhandle(\n",
+    "            detached_handle, os.O_RDONLY)\n",
+    "\n",
+    "        with open(file_descriptor) as file:\n",
+    "            data = file.read()\n",
+    "            \n",
+    "        return data\n",
+    "    \n",
+    "else:\n",
+    "    def read_trf_contents(filepath):\n",
+    "        with open(filepath, 'r') as file:\n",
+    "            data = file.read()\n",
+    "            \n",
+    "        return data"
    ]
   },
   {
@@ -30,15 +71,7 @@
    "source": [
     "tel_paths = [path for path in data_paths if \"tel\" in path.name]\n",
     "assert len(tel_paths) == 1\n",
-    "tel_path = tel_paths[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "tel_path = tel_paths[0]\n",
     "tel_path"
    ]
   },
@@ -48,25 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "handle = win32file.CreateFile(\n",
-    "    str(tel_path),\n",
-    "    win32file.GENERIC_READ,\n",
-    "    win32file.FILE_SHARE_DELETE |\n",
-    "    win32file.FILE_SHARE_READ |\n",
-    "    win32file.FILE_SHARE_WRITE,\n",
-    "    None,\n",
-    "    win32file.OPEN_EXISTING,\n",
-    "    0,\n",
-    "    None)\n",
-    "\n",
-    "\n",
-    "detached_handle = handle.Detach()\n",
-    "\n",
-    "file_descriptor = msvcrt.open_osfhandle(\n",
-    "    detached_handle, os.O_RDONLY)\n",
-    "\n",
-    "with open(file_descriptor) as file:\n",
-    "    data = file.read()"
+    "data = read_trf_contents(tel_path)"
    ]
   },
   {
@@ -75,7 +90,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data"
+    "mlc_pos_pattern = ' *-?\\d+\\.\\d'\n",
+    "ten_mlc_pos_pattern = \",\".join([mlc_pos_pattern,]*10)\n",
+    "sixteen_rows_of_mlcs_pattern = \"\\n\".join([ten_mlc_pos_pattern,]*16)"
    ]
   },
   {
@@ -83,7 +100,63 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "weird_ones = \"\\n\".join([\",\".join([\"1\",]*6),]*13)\n",
+    "\n",
+    "decimal_param = \"-?\\d+\\.\\d+\"\n",
+    "optional_decimal_param = \"-?\\d+(?:\\.\\d+)?\"\n",
+    "\n",
+    "parameters = (\n",
+    "    \"1,1\\n\"\n",
+    "    f\"{decimal_param},({optional_decimal_param})\\n\"\n",
+    "    f\"0\\n{decimal_param},{decimal_param},{decimal_param},{decimal_param}\\n\"\n",
+    "    f\"({decimal_param}),{decimal_param},{decimal_param},{decimal_param}\\n\"\n",
+    "    f\"{optional_decimal_param},({optional_decimal_param}),{optional_decimal_param},({optional_decimal_param})\"\n",
+    ")\n",
+    "\n",
+    "weird_zeros = \"       0\\n0\\n0\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# total_pattern = f\"({sixteen_rows_of_mlcs_pattern})\\n{weird_ones}\\n({parameters})\\n{weird_zeros}\"\n",
+    "total_pattern = f\"({sixteen_rows_of_mlcs_pattern})\\n{weird_ones}\\n{parameters}\"\n",
+    "all_controlpoint_results = re.findall(total_pattern, data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jaws = [(float(result[3]), float(result[4])) for result in all_controlpoint_results]\n",
+    "jaws"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gantry_angle = [float(result[1]) for result in all_controlpoint_results]\n",
+    "gantry_angle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mu = [float(result[2]) for result in all_controlpoint_results]\n",
+    "mu"
+   ]
   }
  ],
  "metadata": {
@@ -102,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
