delivery from trf initial exploration

--- a/examples/labs/rccc/monaco-trf-comparison/001-read-tel-file.ipynb
+++ b/examples/labs/rccc/monaco-trf-comparison/001-read-tel-file.ipynb
@@ -9,7 +9,32 @@
     "import re\n",
     "import sys\n",
     "\n",
-    "import pymedphys"
+    "import numpy as np\n",
+    "\n",
+    "import pydicom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Makes it so any changes in pymedphys is automatically\n",
+    "# propagate into the notebook without needing a kernel reset.\n",
+    "from IPython.lib.deepreload import reload\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pymedphys\n",
+    "import pymedphys._utilities.transforms"
    ]
   },
   {
@@ -69,11 +94,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tel_paths = [path for path in data_paths if \"tel\" in path.name]\n",
-    "assert len(tel_paths) == 1\n",
-    "tel_path = tel_paths[0]\n",
-    "tel_path"
+    "def get_file_type(input_paths, file_type):\n",
+    "    paths = [path for path in input_paths if file_type in path.name]\n",
+    "    assert len(paths) == 1\n",
+    "    return paths[0]\n",
+    "    \n",
+    "\n",
+    "tel_path = get_file_type(data_paths, \"tel\")\n",
+    "dcm_path = get_file_type(data_paths, \"dcm\")\n",
+    "# dcm_path"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delivery_dcm = pymedphys.Delivery.from_dicom(\n",
+    "    pydicom.read_file(str(dcm_path), force=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -134,7 +181,134 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jaws = [(float(result[3]), float(result[4])) for result in all_controlpoint_results]\n",
+    "# all_controlpoint_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delivery_dcm.mu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mu = np.cumsum([float(result[2]) for result in all_controlpoint_results])\n",
+    "mu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.allclose(mu, delivery_dcm.mu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iec_gantry_angle = [float(result[1]) for result in all_controlpoint_results]\n",
+    "iec_gantry_angle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bipolar_gantry_angle = pymedphys._utilities.transforms.convert_IEC_angle_to_bipolar(iec_gantry_angle)\n",
+    "bipolar_gantry_angle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.allclose(bipolar_gantry_angle, delivery_dcm.gantry)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# jaws = [(float(result[3]), float(result[4])) for result in all_controlpoint_results]\n",
+    "# jaws"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jaw_gap = np.array([float(result[3]) for result in all_controlpoint_results])\n",
+    "jaw_field_centre = np.array([float(result[4]) for result in all_controlpoint_results])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jaw_a = jaw_field_centre + jaw_gap/2\n",
+    "jaw_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jaw_b = -(jaw_field_centre - jaw_gap/2)\n",
+    "jaw_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jaws = np.vstack([jaw_a, jaw_b]).T\n",
     "jaws"
    ]
   },
@@ -144,8 +318,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gantry_angle = [float(result[1]) for result in all_controlpoint_results]\n",
-    "gantry_angle"
+    "np.allclose(jaws, delivery_dcm.jaw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array(delivery_dcm.jaw)[:,1] - a_jaw + np.array(delivery_dcm.jaw)[:,0]"
    ]
   },
   {
@@ -154,8 +357,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mu = [float(result[2]) for result in all_controlpoint_results]\n",
-    "mu"
+    "(np.array(delivery_dcm.jaw)[:,0] - np.array(delivery_dcm.jaw)[:,1]) / 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jaw_1 = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array(delivery_dcm.jaw)[:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_jaw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delivery_dcm.jaw"
    ]
   }
  ],
@@ -175,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
