write 'from_monaco' into DeliveryMonaco object
Former-commit-id: d593a8f35ff41f71b7124ef5a4f10a8dbbd16e5a

--- a/examples/labs/rccc/monaco-trf-comparison/002-read-tel-file.ipynb
+++ b/examples/labs/rccc/monaco-trf-comparison/002-read-tel-file.ipynb
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vmat_with_col_paths = [path for path in data_paths if path.parent.name == \"StaticAnglesNoCol\"]\n",
+    "vmat_with_col_paths = [path for path in data_paths if path.parent.name == \"VMATwithCol\"]\n",
     "vmat_with_col_paths"
    ]
   },
@@ -167,7 +167,7 @@
     "parameters = (\n",
     "    \"1,1\\n\"\n",
     "    f\"{decimal_param},({optional_decimal_param})\\n\"\n",
-    "    f\"0\\n{decimal_param},{decimal_param},{decimal_param},{decimal_param}\\n\"\n",
+    "    f\"({optional_decimal_param})\\n{decimal_param},{decimal_param},{decimal_param},{decimal_param}\\n\"\n",
     "    f\"({decimal_param}),{decimal_param},{decimal_param},{decimal_param}\\n\"\n",
     "    f\"{optional_decimal_param},({optional_decimal_param}),{optional_decimal_param},({optional_decimal_param})\"\n",
     ")\n",
@@ -217,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mu = np.cumsum([float(result[2]) for result in all_controlpoint_results])\n",
+    "mu = np.cumsum([float(result[3]) for result in all_controlpoint_results])\n",
     "mu"
    ]
   },
@@ -227,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.allclose(mu, delivery_dcm.mu)"
+    "np.max(np.abs(mu - np.array(delivery_dcm.mu))) < 0.01"
    ]
   },
   {
@@ -235,7 +235,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "iec_coll_angle = [float(result[2]) for result in all_controlpoint_results]\n",
+    "bipolar_coll_angle = pymedphys._utilities.transforms.convert_IEC_angle_to_bipolar(iec_coll_angle)\n",
+    "\n",
+    "np.allclose(bipolar_coll_angle, delivery_dcm.collimator)"
+   ]
   },
   {
    "cell_type": "code",
@@ -244,7 +249,7 @@
    "outputs": [],
    "source": [
     "iec_gantry_angle = [float(result[1]) for result in all_controlpoint_results]\n",
-    "iec_gantry_angle"
+    "# iec_gantry_angle"
    ]
   },
   {
@@ -289,8 +294,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jaw_gap = np.array([float(result[3]) for result in all_controlpoint_results])\n",
-    "jaw_field_centre = np.array([float(result[4]) for result in all_controlpoint_results])"
+    "jaw_gap = np.array([float(result[4]) for result in all_controlpoint_results])\n",
+    "jaw_field_centre = np.array([float(result[5]) for result in all_controlpoint_results])"
    ]
   },
   {
@@ -376,6 +381,13 @@
    "source": [
     "np.allclose(mlcs, delivery_dcm.mlc)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
