--- a/examples/labs/rccc/monaco-trf-comparison/005-batch-mu-density-comparison.ipynb
+++ b/examples/labs/rccc/monaco-trf-comparison/005-batch-mu-density-comparison.ipynb
@@ -103,17 +103,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_and_save_results(mu_density_angles, mudensity_tel, mudensity_trf, gammas):\n",
+    "def plot_and_save_results(mu_density_angles, mudensity_tel, mudensity_trf, gammas, output_dir):\n",
     "    for gantry_angle, tel_result, trf_result, gamma in zip(mu_density_angles, mudensity_tel, mudensity_trf, gammas):\n",
     "        markdown_print(f\"### Gantry Angle: {gantry_angle}\")\n",
     "\n",
     "        plt.figure()\n",
     "        pymedphys.mudensity.display(grid, tel_result)\n",
     "        plt.title(\"Monaco Plan\")\n",
+    "        plt.savefig(output_dir.joinpath(f\"G{gantry_angle}_001_monaco.png\"))\n",
     "\n",
     "        plt.figure()\n",
     "        pymedphys.mudensity.display(grid, tel_result)\n",
     "        plt.title(\"Logfile Result\")\n",
+    "        plt.savefig(output_dir.joinpath(f\"G{gantry_angle}_002_logfile.png\"))\n",
     "\n",
     "        diff = trf_result - tel_result\n",
     "        largest_item = np.max(np.abs(diff))\n",
@@ -121,13 +123,16 @@
     "        plt.figure()\n",
     "        pymedphys.mudensity.display(grid, diff, cmap=\"seismic\", vmin=-largest_item, vmax=largest_item)\n",
     "        plt.title(\"Logfile - Monaco\")\n",
+    "        plt.savefig(output_dir.joinpath(f\"G{gantry_angle}_003_diff.png\"))\n",
     "\n",
     "        plt.figure()\n",
     "        pymedphys.mudensity.display(grid, gamma, cmap=\"coolwarm\", vmin=0, vmax=2)\n",
     "        plt.title(f\"Local Gamma | {percent_deviation}%/{mm_dist_threshold}mm\")\n",
+    "        plt.savefig(output_dir.joinpath(f\"G{gantry_angle}_004_gamma_map.png\"))\n",
     "\n",
     "        plt.figure()\n",
     "        plot_gamma_hist(gamma, percent_deviation, mm_dist_threshold)\n",
+    "        plt.savefig(output_dir.joinpath(f\"G{gantry_angle}_005_gamma_hist.png\"))\n",
     "\n",
     "        plt.show()"
    ]
@@ -158,6 +163,9 @@
     "    tel_path = get_file_type(current_paths, \"tel\")\n",
     "    trf_path = get_file_type(current_paths, \"trf\")\n",
     "    \n",
+    "    results = trf_path.parent.joinpath(\"results\")\n",
+    "    results.mkdir(exist_ok=True)\n",
+    "    \n",
     "    delivery_tel = pymedphys.Delivery.from_monaco(tel_path)\n",
     "    delivery_trf = pymedphys.Delivery.from_logfile(trf_path)\n",
     "    \n",
@@ -170,7 +178,7 @@
     "        gammas.append(\n",
     "            pymedphys.gamma(coords, tel_result, coords, trf_result, percent_deviation, mm_dist_threshold, local_gamma=True))\n",
     "        \n",
-    "    plot_and_save_results(mu_density_angles, mudensity_tel, mudensity_trf, gammas)"
+    "    plot_and_save_results(mu_density_angles, mudensity_tel, mudensity_trf, gammas, results)"
    ]
   },
   {
